examples/test/testpolicy7364.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7364
  namespace: namespace95
spec:
  podSelector:
    matchLabels:
      key14: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value42
          key8: value31
      podSelector:
        matchLabels:
          key43: value49
          key15: value42
